--- a/register.html
+++ b/register.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <!--Header for each app-->
+    <header class="main-header">
+        <img src="assets/logo.png" alt="Eco Travel Logo" class="logo" />
+        <h1 class="app-title">Eco Travel Planner</h1>
+      </header>
+
     <div class="form-container">
         <h2>Register</h2>
         <form id="refister-form">
