Add copywriting message

--- a/register.html
+++ b/register.html
@@ -38,4 +38,7 @@
     <script src="js/register.js"></script>
     
 </body>
+<footer>
+    <p>Copywrited by Group 8 OCC 3 Web Programming</p>
+</footer>
 </html>
