Add some style to the copywrite message

--- a/register.html
+++ b/register.html
@@ -39,6 +39,6 @@
     
 </body>
 <footer>
-    <p>Copywrited by Group 8 OCC 3 Web Programming</p>
+    <p>Copywritted by Group 8 OCC 3 Web Programming</p>
 </footer>
 </html>
