Added logo picture

--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 <body>
     <!--Header for each app-->
     <header class="main-header">
-        <img src="assets/logo.png" alt="Eco Travel Logo" class="logo" />
+        <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
         <h1 class="app-title">Eco Travel Planner</h1>
       </header>
 
