--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--Header for each app-->
+    <!--Header for each page-->
     <header class="main-header">
         <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
         <h1 class="app-title">Eco Travel Planner</h1>
