--- a/register.html
+++ b/register.html
@@ -8,15 +8,17 @@
 </head>
 
 <body>
+
     <!--Header for each page-->
     <header class="main-header">
         <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
         <h1 class="app-title">Eco Travel Planner</h1>
       </header>
-
+      
+      <!--Main content-->
     <div class="form-container">
         <h2>Register</h2>
-        <form id="refister-form">
+        <form id="register-form">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required/>
 
@@ -36,9 +38,11 @@
     </div>
 
     <script src="js/register.js"></script>
+
+    <!--Footer for copywrite-->
+    <footer>
+        <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+    </footer>
     
 </body>
-<footer>
-    <p>Copywritted by Group 8 OCC 3 Web Programming</p>
-</footer>
 </html>
