Change div to main tag

--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
       </header>
       
       <!--Main content-->
-    <div class="form-container">
+    <main class="form-container">
         <h2>Register</h2>
         <form id="register-form">
             <label for="name">Name</label>
@@ -35,7 +35,7 @@
             <button type="submit">Register</button>
         </form>
         <p>Already have an account? <a href="index.html">Login</a></p>
-    </div>
+    </main>
 
     <script src="js/register.js"></script>
 
