--- a/login.html
+++ b/login.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Eco Travel Planner</title>
+    <title>Login - Eco Travel Planner</title>
     <link rel="stylesheet" href="css/style.css"> <!--Linking the front page-->
 </head>
 
@@ -17,27 +15,21 @@
       
       <!--Main content-->
     <main class="form-container">
-        <h2>Register</h2>
-        <form id="register-form">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required/>
+        <h2>Login</h2>
+        <form id="login-form">
 
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required/>
 
-
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required/>
 
-            <label for="profilePic">Profile Picture</label>
-            <input type="file" id="profilePic" name="profilePic" accept="image/*"/>
-
-            <button type="submit">Register</button>
+            <button type="submit">Login</button>
         </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p>Don't have an account? <a href="register.html">Register Account</a></p>
     </main>
 
-    <script src="js/register.js"></script>
+    <script src="js/login.js"></script>
 
     <!--Footer for copywrite-->
     <footer>
@@ -45,4 +37,3 @@
     </footer>
     
 </body>
-</html>
