--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Eco Travel Planner</title>
     <link rel="stylesheet" href="css/style.css"> <!--Linking the front page-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 
 <body>
@@ -29,8 +30,16 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required/>
 
+            <!--Bootstrap element-->
             <label for="profilePic">Profile Picture</label>
-            <input type="file" id="profilePic" name="profilePic" accept="image/*"/>
+            <input class="form-control" type="file" id="profilePic" name="profilePic" accept="image/*"/>
+
+            <!--Check box-->
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkDefault" required>
+                <label class="form-check-label" for="checkDefault">I agree with the <a href="">Terms and Conditions</a></label>
+                 
+            </div>
 
             <button type="submit">Register</button>
         </form>
@@ -44,5 +53,7 @@
         <p>Copywritted by Group 8 OCC 3 Web Programming</p>
     </footer>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
