--- a/index.html
+++ b/index.html
@@ -9,69 +9,86 @@
     <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
 </head>
 <body>
+  
     <header class="main-header">
         <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
         <h1 class="app-title">Eco Travel Planner</h1>
     </header>
     <!--Navigation bar-->
-    <nav class=dashboard-nav-bar>
-        <a>Home</a>
-        <a>About Us</a>
-        <a>Logout</a>
+    <nav class="dashboard-nav-bar">
+        <a href = "index.html">Home</a> |
+        <a href = "about.html">About Us</a> |
+        <a href="#" id="logout-link">Logout</a>
     </nav>
 
+    <main>
     <div class="dashboard-container">
         <!--Welcome section-->
         <div id="welcome-section">
-            <h2>Welcome, <span id ="user-name"></span>!</h2>
-            <img id="profile-pic" alt="Profile Picture" class="profile-pic"/>
+            <h2>Welcome, <span id ="user-name"></span>!</h2> <!--Display the user name-->
+            <img id="profile-pic" alt="Profile Picture" class="profile-pic"/> <!--Display the user profile picture-->
         </div>
 
         <!--Module section-->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
-                <div class="card">
-                  <img src="ProfileManagement.png" class="card-img-top" alt="Profile Management">
-                  <div class="card-body">
-                    <a href ="profileManagement.html"><h5 class="card-title">Manage Your Profile</h5></a>
-                    <p class="card-text">Update and edit your profile details.</p>
-                  </div>
-                </div>
-              </div>
+                <a href="profileManagement.html" class="text-decoration-none text-dark">
+                    <div class="card h-100">
+                        <img src="ProfileManagement.png" class="card-img-top" alt="Profile Management">
+                        <div class="card-body">
+                            <h5 class="card-title">Manage Your Profile</h5>
+                            <p class="card-text">Update and edit your profile details.</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
             <div class="col">
-                <div class="card">
-                  <img src="TravelPlanner.png" class="card-img-top" alt="TravelPlanner">
-                  <div class="card-body">
-                    <a href ="travelPlanner.html"><h5 class="card-title">Plan Your Travel</h5></a>
-                    <p class="card-text">Plan your travel journey smartly with Eco Travel Planner</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col">
-                <div class="card">
-                  <img src="Weather.png" class="card-img-top" alt="Weather Module">
-                  <div class="card-body">
-                    <a href ="weatherModule.html"><h5 class="card-title">Check Weather</h5></a>
-                    <p class="card-text">Should you bring your umbrella today?</p>
-                  </div>
-                </div>
-              </div>
+                <a href="TravelPlanner.html" class="text-decoration-none text-dark">
+                    <div class="card h-100">
+                        <img src="TravelPlanner.png" class="card-img-top" alt="TravelPlanner">
+                        <div class="card-body">
+                            <h5 class="card-title">Plan Your Travel</h5>
+                            <p class="card-text">Plan your travel journey smartly with Eco Travel Planner</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
 
             <div class="col">
-                <div class="card">
-                  <img src="carbonFootprint.png" class="card-img-top" alt="Carbon Footprint Calculator">
-                  <div class="card-body">
-                    <a href ="carbonFootprint.html"><h5 class="card-title">Carbon Footprint Calculator</h5></a>
-                    <p class="card-text">Plan your travel journey smartly with Eco Travel Planner</p>
-                  </div>
-                </div>
-              </div>
+                <a href="weatherModule.html" class="text-decoration-none text-dark">
+                    <div class="card h-100">
+                        <img src="Weather.png" class="card-img-top" alt="Weather Module">
+                        <div class="card-body">
+                            <h5 class="card-title">Check Weather</h5>
+                            <p class="card-text">Should you bring your umbrella today?</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col">
+                <a href="carbonFootprint.html" class="text-decoration-none text-dark">
+                    <div class="card h-100">
+                        <img src="carbonFootprint.png" class="card-img-top" alt="Carbon Footprint Calculator">
+                        <div class="card-body">
+                            <h5 class="card-title">Carbon Footprint Calculator</h5>
+                            <p class="card-text">Plan your travel journey smartly with Eco Travel Planner</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
+    </main>
+
+    <!--Footer for copywrite-->
+    <footer>
+      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+  </footer>
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-
+    <script src="js/index.js"></script>
 </body>
 </html>
