Added html file for all the modules

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="col">
-                <a href="TravelPlanner.html" class="text-decoration-none text-dark">
+                <a href="travelPlanner.html" class="text-decoration-none text-dark">
                     <div class="card h-100">
                         <img src="TravelPlanner.png" class="card-img-top" alt="TravelPlanner">
                         <div class="card-body">
