--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--Module section-->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
-                <a href="profileManagement.html" class="text-decoration-none text-dark">
+                <a href="generalModule/profileManagement.html" class="text-decoration-none text-dark">
                     <div class="card h-100">
                         <img src="ProfileManagement.png" class="card-img-top" alt="Profile Management">
                         <div class="card-body">
