--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
     <!--Header for each page-->
     <header class="main-header">
-        <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
+        <img src="../assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
         <h1 class="app-title">Eco Travel Planner</h1>
       </header>
       
