--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assets/images/travel_img.jpeg" class="card-img-top" alt="...">
                       
                         <div class="card-body">
                           <h5 class="card-title">Travel Planner</h5>
