calculate carbon footprint

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Calculator</h5>
                           <p class="card-text">Curious about how much carbon footprint your trip is?</p>
-                          <a href="#" class="btn btn-primary">Calculate Carbon Footprint</a>
+                          <a href="carbonFootprint.html" class="btn btn-primary">Calculate Carbon Footprint</a>
                         </div>
                       </div>
                 </div>
