--- a/weatherModule.html
+++ b/weatherModule.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EcoTrip Planner</title>
+  <title>Weather Forecast - Eco Travel Planner</title>
   <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
   <link rel="stylesheet" href="css/weather.css"> 
 </head>
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
-        <h1>EcoTrip Planner</h1>
+        <h1>Eco Travel Planner</h1>
     </header>
 
     <div class="container">
