--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -10,6 +10,19 @@
     <link rel="stylesheet" href="css/carbonFootprint.css"> <!--css for carbon footprint page-->
 </head>
 <body>
+
+  <!-- Main Side Bar -->
+  <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
+  <div class="container">
+    <div class="mainsidebar" id="mainsidebar">
+    <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon">  Profile</a>
+    <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
+    <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
+    <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
+    <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+  </div>
+
+
   <div class="wrapper">
     <header class="main-header">
         <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
@@ -130,6 +143,10 @@
           // window.location.href = 'login.html'; 
         });
       }
+
+    function toggleSidebar() {
+      document.getElementById("mainsidebar").classList.toggle("open");
+    }
     </script>
 </body>
 
