FAQs and Travel Tips on setting

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <a href="#" id="logout-link">Logout</a>
     </nav>
 
-    <!-- Main ide Bar -->
+    <!-- Main Side Bar -->
     <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
-    <div class="container">
       <div class="mainsidebar" id="mainsidebar">
       <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon">  Profile</a>
       <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
