--- a/profileManagement.html
+++ b/profileManagement.html
@@ -50,8 +50,9 @@
             <h2>Account Information</h2>
             <div class="user-details">
               <div class="photo-section">
-                <div class="avatar large"></div>
-                <a href="#" class="add-photo">Add Photo</a>
+                <div class="avatar large" id="avatarPreview"></div>
+                <label for="photoUpload" class="add-photo">Add Photo</label>
+                <input type="file" id="photoUpload" accept="image/*" style="display: none;" />
               </div>
               <div class="field">
                 <label for="username">Preferred Username</label>
@@ -60,7 +61,9 @@
                   <span class="edit-icon">✏️</span>
                 </div>
               </div>
-              
+            </div>
+
+            <div class="info-edit">
               <div class="info-row">
                 <div class="info-labels">
                   <p><strong>Email</strong><br>yourname@gmail.com</p>
@@ -93,7 +96,7 @@
           <section id="help" class="content-section" style="display: none;">
             <h2>Help Center</h2>
             <div class="field">
-              <label for="concern">Tell us your concern !</label>
+              <label for="concern" style="text-align: center;">Tell us your concern !</label>
               <div class="input-button-group">
                 <div class="input-box">
                   <input type="text" id="concern" value="Write here..." disabled />
@@ -177,7 +180,7 @@
               </ul>
             </section>
             <p style="text-align: center;"> Need more help? Feel free to contact our support team. We're happy to help !</p>
-            <p style="text-align: center;"> Support team: ecotravelplanner@gmail.com / 012-5429812</p>
+            <p style="text-align: center;"> Support team: ecotravelplanner@gmail.com | 012-5429812</p>
           </section>
 
           <!-- SECTION ABOUT US-->
@@ -189,7 +192,21 @@
           <!-- SECTION DELETE ACC-->
           <section id="delete" class="content-section" style="display: none;">
             <h2>Delete Account</h2>
-            <!-- Your about content here -->
+            <p class="warning-text">
+              Deleting your account is permanent and cannot be undone. This will remove all your data, saved travel plans, preferences, and profile information.
+            </p>
+
+            <ul class="delete-consequences">
+              <li><img src="icons/XIcon.png" alt="X" class="icon"> All saved trips and data will be erased</li>
+              <li> <img src="icons/XIcon.png" alt="X" class="icon">Your profile and preferences will be lost</li>
+              <li><img src="icons/XIcon.png" alt="X" class="icon"> You won't be able to log in again</li>
+             <!-- ❌ --> 
+            </ul>
+
+            <p>Are you absolutely sure you want to delete your account?</p>
+
+            <button class="delete-btn" onclick="confirmDelete()">Delete My Account</button>
+            <button class="cancel-btn" onclick="showSection('userAccount')">Cancel</button>
           </section>
 
         </main>
@@ -205,8 +222,22 @@
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   <script src="js/index.js"></script>
-
+  
   <script>
+    // for preview image for profile pic
+     document.getElementById('photoUpload').addEventListener('change', function(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          document.getElementById('avatarPreview').style.backgroundImage = `url(${e.target.result})`;
+          document.getElementById('avatarPreview').style.backgroundSize = 'cover';
+          document.getElementById('avatarPreview').style.backgroundPosition = 'center';
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
     function showSection(id) {
       // Hide all sections
       document.querySelectorAll('.content-section').forEach(sec => {
@@ -232,6 +263,14 @@
       });
     });
     });
+
+    function confirmDelete() {
+      if (confirm("Are you sure you want to permanently delete your account?")) {
+        // Here, you would send a request to your backend to delete the account.
+        alert("Account deleted. (Simulated)");
+        // Redirect or clear session, etc.
+      }
+    }
 
   </script>
   </body>
