--- a/carbonFootprint.html
+++ b/carbonFootprint.html
@@ -14,39 +14,33 @@
 
 <body>
 
-  <!-- Main Side Bar -->
-  <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
-  <div class="mainsidebar" id="mainsidebar">
-    <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
-    <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
-    <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
-    <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
-    <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
-  </div>
-
-
   <div class="wrapper">
     <header class="main-header">
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">Eco Travel Planner</h1>
+
+      <!-- sign up/log in button-->
+        <div class="login-signup-container">
+          <a href="login.html">Log in</a>
+          <button>Sign up</button>
+        </div>
     </header>
     <!--Navigation bar-->
-    <nav class="dashboard-nav-bar">
-      <a href="index.html">Home</a> |
-      <a href="about.html">About Us</a> |
-      <a href="login.html" onclick="return confirmLogout()">Logout</a>
-    </nav>
+        <nav class="dashboard-nav-bar">
+            <a href="index.html">Home</a> |
+            <a href="profileManagement.html">Profile</a> |
+            <a href="login.html" onclick="return confirmLogout()">Logout</a>
+        </nav>
 
     <!-- Main Side Bar -->
-    <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
-    <div class="container">
+      <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
       <div class="mainsidebar" id="mainsidebar">
         <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
         <a href="index.html"><img src="icons/homeIcon.png" alt="Home" class="icon"> Home</a>
-        <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel
-          Planner</a>
+        <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
         <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
         <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"class="icon">Logout</a>
       </div>
 
       <main class="content">
@@ -127,12 +121,17 @@
               </div>
             </div>
           </div>
+        </div>
       </main>
 
 
 
     </div>
 
+    <footer>
+      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+    </footer>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"></script>
@@ -151,8 +150,5 @@
     </script>
 </body>
 
-<footer>
-  <p>Copywritted by Group 8 OCC 3 Web Programming</p>
-</footer>
 
 </html>
