--- a/profileManagement.html
+++ b/profileManagement.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
 </head>
 
 <body>
@@ -14,8 +17,21 @@
     <header class="main-header">
       <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
       <h1 class="app-title">Eco Travel Planner</h1>
+
+      <!-- sign up/log in button-->
+       <div class="login-signup-container">
+         <a href="login.html">Log in</a>
+         <button>Sign up</button>
+      </div>
     </header>
-  
+
+   <!--Top Navigation bar-->
+        <nav class="dashboard-nav-bar">
+            <a href="index.html">Home</a> |
+            <a href="profileManagement.html">Profile</a> |
+            <a href="login.html" onclick="return confirmLogout()">Logout</a>
+        </nav>
+
     <!-- Main Side Bar -->
     <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
       <div class="mainsidebar" id="mainsidebar">
@@ -24,6 +40,7 @@
       <a href="travelPlanner.html"><img src="icons/travelIcon.png" alt="Travel Planner" class="icon"> Travel Planner</a>
       <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
       <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+      <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"class="icon">Logout</a>
     </div>
 
     <!-- Profile Side Bar -->
@@ -38,7 +55,7 @@
             <a href="#" onclick="showSection('userAccount')"><img src="icons/accountIcon.png" alt="Your Account" class="icon"> Your Account</a>
             <a href="#" onclick="showSection('favourite')"><img src="icons/loveIcon.png" alt="Favourite" class="icon"> Favourite</a>
             <a href="#" onclick="showSection('help')"><img src="icons/helpIcon.png" alt="Help Center" class="icon">  Help Center</a>
-            <a href="#" onclick="showSection('about')"><img src="icons/infoIcon.png" alt="About Us" class="icon">  About Us</a>
+            <a href="#" onclick="showSection('aboutUs')"><img src="icons/infoIcon.png" alt="About Us" class="icon">  About Us</a>
             <a href="#" onclick="showSection('delete')"><img src="icons/deleteIcon.png" alt="Delete Account" class="icon">  Delete Account</a>
           </nav>
         </aside>
@@ -87,7 +104,6 @@
             </div>
           </section>
         
-
           <!-- SECTION FAVOURITE-->
           <section id="favourite" class="content-section" style="display: none;">
           </section>
@@ -184,7 +200,7 @@
           </section>
 
           <!-- SECTION ABOUT US-->
-          <section id="about" class="content-section" style="display: none;">
+          <section id="aboutUs" class="content-section" style="display: none;">
             <h2>About Us</h2>
             <!-- Your about content here -->
           </section>
@@ -271,6 +287,10 @@
         // Redirect or clear session, etc.
       }
     }
+    //for log out top bar
+    function confirmLogout() {
+            return confirm("Are you sure you want to logout?")
+        }
 
   </script>
   </body>
