--- a/weatherModule.html
+++ b/weatherModule.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast - Eco Travel Planner</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"> <!--css for generally-->
     <link rel="stylesheet" href="css/weather.css">
     <link rel="stylesheet" href="css/dashboard.css"> <!--css for dashboard-->
 </head>
 
 <body>
-
-    <!-- Main Side Bar -->
+<!-- Main Side Bar -->
     <div class="mainHamburger" onclick="toggleSidebar()">☰</div>
     <div class="mainsidebar" id="mainsidebar">
         <a href="profileManagement.html"><img src="icons/accountIcon.png" alt="Profile" class="icon"> Profile</a>
@@ -21,17 +22,25 @@
             Planner</a>
         <a href="weatherModule.html"><img src="icons/sunWeatherIcon.png" alt="Weather" class="icon"> Weather</a>
         <a href="carbonFootprint.html"><img src="icons/calculatorIcon.png" alt="Calculator" class="icon"> Calculator</a>
+        <a href="login.html" onclick="return confirmLogout()"><img src="icons/logout.png" alt="Logout"class="icon">Logout</a>
     </div>
 
     <div class="wrapper">
         <header class="main-header">
             <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
             <h1 class="app-title">Eco Travel Planner</h1>
+
+        <!-- sign up/log in button-->
+        <div class="login-signup-container">
+          <a href="login.html">Log in</a>
+          <button>Sign up</button>
+        </div>
         </header>
 
+        <!--Navigation bar-->
         <nav class="dashboard-nav-bar">
             <a href="index.html">Home</a> |
-            <a href="about.html">About Us</a> |
+            <a href="profileManagement.html">Profile</a> |
             <a href="login.html" onclick="return confirmLogout()">Logout</a>
         </nav>
         <div class="container">
@@ -124,6 +133,9 @@
         <script>
             function confirmLogout() {
                 return confirm("Are you sure you want to logout?")
+            }
+            function toggleSidebar() {
+                document.getElementById("mainsidebar").classList.toggle("open");
             }
         </script>
 
