--- a/weatherModule.html
+++ b/weatherModule.html
@@ -33,7 +33,7 @@
         <!-- sign up/log in button-->
         <div class="login-signup-container">
           <a href="login.html">Log in</a>
-          <button><a href="register.html"></a>Sign up</button>
+          <button>Sign up</button>
         </div>
         </header>
 
@@ -47,34 +47,35 @@
 
             <div class="weather-data">
 
-                <!--location (current/searched)-->
-                <div class="location">
-                    <img src="icons/locationIcon.svg" alt="Location Icon" class="locationIcon" />
-                    <h2>Kuala Lumpur</h2>
-                </div>
-
                 <!--current weather forecast-->
                 <div class="current-weather">
                     <div class="details">
                         <h2>_______ ( ______ )</h2>
-                        <h6>Temperature: __°C</h6>
-                        <h6>Wind: __ M/S</h6>
-                        <h6>Humidity: __%</h6>
+                        <h6>Temperature : __°C</h6>
+                        <h6>Wind : __ M/S</h6>
+                        <h6>Humidity : __%</h6>
                     </div>
                 </div>
 
                 <div class="days-forecast">
 
                     <!--5 days weather forecast-->
-                    <h2>5-Day Forecast</h2>
+                    <h2>4-Day Forecast</h2>
 
                     <ul class="weather-cards">
 
                         <li class="card">
                             <h3>( ______ )</h3>
-                            <h6>Temp: __C</h6>
-                            <h6>Wind: __ M/S</h6>
-                            <h6>Humidity: __%</h6>
+                            <h6>Temp : __C</h6>
+                            <h6>Wind : __ M/S</h6>
+                            <h6>Humidity : __%</h6>
+                        </li>
+
+                        <li class="card">
+                            <h3>( ______ )</h3>
+                            <h6>Temp : __C</h6>
+                            <h6>Wind : __ M/S</h6>
+                            <h6>Humidity : __%</h6>
                         </li>
 
                         <li class="card">
@@ -86,23 +87,9 @@
 
                         <li class="card">
                             <h3>( ______ )</h3>
-                            <h6>Temp: __C</h6>
-                            <h6>Wind: __ M/S</h6>
-                            <h6>Humidity: __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp: __C</h6>
-                            <h6>Wind: __ M/S</h6>
-                            <h6>Humidity: __%</h6>
-                        </li>
-
-                        <li class="card">
-                            <h3>( ______ )</h3>
-                            <h6>Temp: __C</h6>
-                            <h6>Wind: __ M/S</h6>
-                            <h6>Humidity: __%</h6>
+                            <h6>Temp : __C</h6>
+                            <h6>Wind : __ M/S</h6>
+                            <h6>Humidity : __%</h6>
                         </li>
                     </ul>
                 </div>
@@ -111,21 +98,13 @@
             <div class="weather-input">
 
                 <!--search bar-->
-                <h3>Enter a City Name</h3>
+                <h2>Enter a City Name</h2>
                 <input class="city-input" type="text" placeholder="Search City">
                 <button class="search-btn">Search</button>
                 <div class="separator"></div>
                 <button class="location-btn">Use Current Location</button>
 
-                <!--city suggestions-->
-                <div class="city-suggestions">
-                    <h2>Cities Suggestions</h3>
-                        <div class="card">Kuala Terengganu</div>
-                        <div class="card">Port Dickson</div>
-                        <div class="card">Georgetown</div>
-                        <div class="card">Kuantan</div>
-                        <div class="card">Bandar Melaka</div>
-                </div>
+
             </div>
 
         </div>
@@ -139,6 +118,8 @@
             }
         </script>
 
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"93dbf461da54e58c","version":"2025.4.0-1-g37f21b1","r":1,"token":"e029c4a3c1704e88ab37ce2409fd73de","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+    <script src="js/weather.js"></script>
 </body>
 
 <!--Footer for copywrite-->
