--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="assets/images/dina.jpg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Manage Profile</h5>
@@ -146,7 +146,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="assets/images/travel_img.jpeg" class="card-img-top" alt="...">
+                                <img src="assets/images/amna.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Travel Planner</h5>
@@ -159,7 +159,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="assets/images/sya.jpg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Weather Checker</h5>
@@ -172,7 +172,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="assets/images/syukri.jpeg" class="card-img-top" alt="...">
 
                                 <div class="card-body">
                                     <h5 class="card-title">Calculator</h5>
