Updated signin button

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 
             </div>
 
-            <!--Welcome section-->
+           
+            <!--Module Section-->
             <div class="container">
                 <div class="row ">
                     <div class="col">
