--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- sign up/log in button-->
             <div class="login-signup-container">
                 <a href="login.html">Log in</a>
-                <button><a href="register.html"></a>Sign up</button>
+                <button><a href="register.html">Sign up</a></button>
             </div>
 
             <img src="assets/logo/Logo ETP.png" alt="Eco Travel Planner Logo" class="logo" />
