--- a/profileManagement.html
+++ b/profileManagement.html
@@ -366,6 +366,9 @@
       </div>
     </main>
 
+     
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"></script>
@@ -425,11 +428,13 @@
       }
 
     </script>
+   
+
 </body>
 
 <!--Footer for copywrite-->
-<footer>
-  <p>Copywritted by Group 8 OCC 3 Web Programming</p>
-</footer>
+    <footer>
+      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+    </footer>
 
 </html>
