--- a/profileManagement.html
+++ b/profileManagement.html
@@ -265,76 +265,83 @@
                   <!-- Team Member 1 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <!-- SVG goes here -->
+                      <img src="assets/images/syukri.jpeg" alt="Muhammad Syukri">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Muhammad Syukri Bin Othman</h3>
-                      <p class="member-title">Leader</p>
-                      <p class="member-description">Former environmental scientist with a passion for sustainable
-                        tourism and outdoor adventures.</p>
+                      <p class="member-title">Project Leader</p>
+                      <p class="member-description">Oversees the project direction, aligns all modules with the
+                        sustainability mission,
+                        and ensures smooth collaboration throughout the development process.
+                      </p>
                     </div>
                   </div>
 
                   <!-- Team Member 2 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <!-- SVG goes here -->
+                      <img src="assets/images/amnaprof.jpeg" alt="Amna Suraya">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Amna Suraya Binti Abdul Halim</h3>
-                      <p class="member-title">Member</p>
-                      <p class="member-description">Tech innovator focused on creating digital solutions that promote
-                        sustainability in the travel industry.</p>
+                      <p class="member-title">UI/UX Designer & Profile Interface Developer</p>
+                      <p class="member-description">Leads the visual design of the platform and co-develops the user
+                        profile interface to ensure a seamless,
+                        engaging, and user-friendly experience.</p>
                     </div>
                   </div>
 
                   <!-- Team Member 3 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <img src="assets/images/sya.jpg" alt="Wan Nur Syahirah">
+                      <img src="assets/images/sya.jpeg" alt="Wan Nur Syahirah">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Wan Nur Syahirah Binti Wan Aziz</h3>
-                      <p class="member-title">Member</p>
-                      <p class="member-description">Builds relationships with eco-friendly businesses worldwide to
-                        expand our network of sustainable options.</p>
+                      <p class="member-title">Data Engineer & User Systems Specialist</p>
+                      <p class="member-description">Designs and maintains the database infrastructure while also
+                        developing the user
+                        profile management system to ensure secure and efficient data handling..</p>
                     </div>
                   </div>
 
                   <!-- Team Member 4 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <img src="assets/images/dina.jpg" alt="Dina Zahirah">
+                      <img src="assets/images/dina.jpeg" alt="Dina Zahirah">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Dina Zahirah Binti Zaidi</h3>
-                      <p class="member-title">Member</p>
-                      <p class="member-description">Experienced software engineer dedicated to creating intuitive,
-                        accessible tools for sustainable travel planning.</p>
+                      <p class="member-title">Sustainable Travel Experience Engineer</p>
+                      <p class="member-description">Builds the travel options module focused on offering low-impact,
+                        environmentally
+                        friendly transportation and route suggestions.</p>
                     </div>
                   </div>
                   <!-- Team Member 5 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <!-- SVG goes here -->
+                      <img src="assets/images/insyee.jpeg" alt="Nur Insyirah">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Nur Insyirah Binti Mohd Isham</h3>
-                      <p class="member-title">Member</p>
-                      <p class="member-description">Experienced software engineer dedicated to creating intuitive,
-                        accessible tools for sustainable travel planning.</p>
+                      <p class="member-title">Eco Impact Analyst & Calculator Developer</p>
+                      <p class="member-description">Creates the carbon footprint calculator to deliver actionable
+                        insights into travel-related emissions,
+                        promoting awareness and sustainable decision-making.</p>
                     </div>
                   </div>
                   <!-- Team Member 6 -->
                   <div class="team-member">
                     <div class="member-image">
-                      <!-- SVG goes here -->
+                      <img src="assets/images/aisya.jpeg" alt="Nur Aisya">
                     </div>
                     <div class="member-content">
                       <h3 class="member-name">Nur Aisya Binti Che Zulkifli</h3>
-                      <p class="member-title">Member</p>
-                      <p class="member-description">Experienced software engineer dedicated to creating intuitive,
-                        accessible tools for sustainable travel planning.</p>
+                      <p class="member-title">Environmental Insights Developer</p>
+                      <p class="member-description">Develops the weather forecast module to provide real-time,
+                        location-based environmental data that
+                        supports smart and eco-conscious travel planning.</p>
                     </div>
                   </div>
                 </div>
@@ -366,75 +373,75 @@
       </div>
     </main>
 
-     
+
   </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-      crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+    crossorigin="anonymous"></script>
+  <script src="js/index.js"></script>
 
-    <script>
-      // for preview image for profile pic
-      document.getElementById('photoUpload').addEventListener('change', function (event) {
-        const file = event.target.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            document.getElementById('avatarPreview').style.backgroundImage = `url(${e.target.result})`;
-            document.getElementById('avatarPreview').style.backgroundSize = 'cover';
-            document.getElementById('avatarPreview').style.backgroundPosition = 'center';
-          };
-          reader.readAsDataURL(file);
-        }
+  <script>
+    // for preview image for profile pic
+    document.getElementById('photoUpload').addEventListener('change', function (event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          document.getElementById('avatarPreview').style.backgroundImage = `url(${e.target.result})`;
+          document.getElementById('avatarPreview').style.backgroundSize = 'cover';
+          document.getElementById('avatarPreview').style.backgroundPosition = 'center';
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    function showSection(id) {
+      // Hide all sections
+      document.querySelectorAll('.content-section').forEach(sec => {
+        sec.style.display = 'none';
       });
+      // Show the selected one
+      document.getElementById(id).style.display = 'block';
+    }
 
-      function showSection(id) {
-        // Hide all sections
-        document.querySelectorAll('.content-section').forEach(sec => {
-          sec.style.display = 'none';
-        });
-        // Show the selected one
-        document.getElementById(id).style.display = 'block';
-      }
+    function toggleSidebar() {
+      document.getElementById("mainsidebar").classList.toggle("open");
+    }
 
-      function toggleSidebar() {
-        document.getElementById("mainsidebar").classList.toggle("open");
-      }
+    document.addEventListener('DOMContentLoaded', function () {
+      const faqItems = document.querySelectorAll('.faq-item');
 
-      document.addEventListener('DOMContentLoaded', function () {
-        const faqItems = document.querySelectorAll('.faq-item');
+      faqItems.forEach(item => {
+        const question = item.querySelector('.faq-question');
+        const toggleButton = item.querySelector('.toggle-button');
 
-        faqItems.forEach(item => {
-          const question = item.querySelector('.faq-question');
-          const toggleButton = item.querySelector('.toggle-button');
-
-          question.addEventListener('click', () => {
-            item.classList.toggle('open');
-          });
+        question.addEventListener('click', () => {
+          item.classList.toggle('open');
         });
       });
+    });
 
-      function confirmDelete() {
-        if (confirm("Are you sure you want to permanently delete your account?")) {
-          // Here, you would send a request to your backend to delete the account.
-          alert("Account deleted. (Simulated)");
-          // Redirect or clear session, etc.
-        }
+    function confirmDelete() {
+      if (confirm("Are you sure you want to permanently delete your account?")) {
+        // Here, you would send a request to your backend to delete the account.
+        alert("Account deleted. (Simulated)");
+        // Redirect or clear session, etc.
       }
-      //for log out top bar
-      function confirmLogout() {
-        return confirm("Are you sure you want to logout?")
-      }
+    }
+    //for log out top bar
+    function confirmLogout() {
+      return confirm("Are you sure you want to logout?")
+    }
 
-    </script>
-   
+  </script>
+
 
 </body>
 
 <!--Footer for copywrite-->
-    <footer>
-      <p>Copywritted by Group 8 OCC 3 Web Programming</p>
-    </footer>
+<footer>
+  <p>Copywritted by Group 8 OCC 3 Web Programming</p>
+</footer>
 
 </html>
